# monotextor-slurm

./: .checks  .env.example  .gitignore  00.merge-batching  00.merge-batching.sh  01.merge-text-meta  02.split-lang  09.2.robots-annotate  09.robotstxt  10.dedup  10.dedup.sh  10.index  10.processing  10.processing-hq  10.processing-hq.sh  10.processing.sh  10.tsv2jsonl  11.exact-dedup-global  11.merge-collections  20.dedup  20.dedup.sh  20.index  20.processing  20.processing.sh  21.merge-collections  21.registers  25.extract-external  30.clean  30.clean.sh  30.stats  90.reduce  90.reduce.sh  90.tsv2jsonl  90.tsv2jsonl.sh  Dockerfile  Dockerfile-webregisters  README.md  aggregate_split.py  batching.py  clean.sh  (+10 more)
blocklists/: hplt_adult_domains
scripts/: 25.extract-external-zh  annotate.py  check-duplicates.sh  check-duplicates.slurm  check-encoding.py  crawl_names.tsv.zst  exactdups.py  filter-stats.py  merge-meta-text.py  openlidv2_to_hplt_codes.jsonl  printlines.py  robots2tsv.py  show-dups.sh  split-lang.py  stats-table.py  web-registers.py
utils/: Cargo.toml
utils/src/: dedup.rs  indexer.rs  lib.rs  minhash_processor.rs  queryreader.rs  split.rs  utils.rs  zpaste.rs
utils/tests/: cli.rs  dedup.out  example.jsonl  example.tsv  mhindex.out  sample1.jsonl.zst  sample2.jsonl.zst
